# CppLink

./: CMakeLists.txt  LICENSE  README.md  brick-types.h  doubleequal.h  maybe.h  modules.h  modulesquare.h  parser.y  quoteunquotecompiler.cpp  quoteunquotecompiler.h  tests.cpp  tokens.l  translator.cpp  translator.h
docs/: modules.md
examples/: basic_generators.cpplink  more_generators.cpplink
libs/: brick-assert.h  brick-types.h  catch.hpp
src/: quoteunquotecompiler.cpp  quoteunquotecompiler.h  tests.cpp  translator.cpp  translator.h  typechecker.cpp  typechecker.h
src/cpplink_lib/: cpplink_lib.h  doubleequal.h  maybe.h  modules.h  modulesquare.h  table_writer.h
src/parsers/: parser.y  parser_inc.h  tokens.l
tests/: modules.cpp  parser.cpp  table_writer.cpp  tests.h
utils/: files_to_constants.py
